--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Benjamin Tom's personal website for WDD 130 course">
+    <meta name="author" content="Benjamin Tom">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Benjamin Tom | WDD 130</title>
 </head>
 <body>
@@ -20,6 +23,11 @@
             Hello, I am Benjamin Tom from Nigeria. I enjoy watching movies. I am a web developer with 3 years of experience. I am a huge marvel fan, I would be watching movies or novel when i'm not coding.
         </p>
     </main>
+    <aside>
+        <h2>Nigeria</h2>
+        <img src="./images/nigeria.jpg" alt="a picture of a water fall in nigeria">
+        <p>Nigeria, located in West Africa, is known for its diverse culture, vibrant cities, and beautiful landscapes, including waterfalls, rainforests, and savannas.</p>
+    </aside>
     <footer>
         <p>&copy; 2023 Benjamin Tom, Nigeria</p>
     </footer>
