--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,18 +32,37 @@
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab ipsam consectetur dolor molestias reiciendis voluptate dicta vero fuga officiis, blanditiis vel minima. Earum, impedit voluptatum nobis esse placeat quos eos iste quidem accusamus fuga temporibus reprehenderit non. Mollitia ratione magni delectus expedita atque accusamus velit laboriosam alias fugit, aspernatur, dolor a exercitationem assumenda quia ducimus voluptates deleniti soluta ullam aut natus sint eos optio. Suscipit aliquid eum rerum sit expedita nisi magnam exercitationem odio, ullam consectetur, harum deserunt alias officia natus. Ex vero quas nam, sint deserunt reiciendis aut quos quisquam nemo recusandae exercitationem molestias nobis eum delectus illum magnam?</p>
             </article>
         </div>
-        <section>
+        <section class="history-section">
             <h2>History</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis animi, nulla voluptatem eligendi ipsum quam pariatur minus reprehenderit modi facere quia aperiam soluta deleniti provident rem. Adipisci at error vel!</p>
+            <img src="./images/rafting-image-four.jpg" alt="history of wwr">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore corporis ex quidem magni aut. Rem quidem aperiam rerum sunt laboriosam exercitationem tempore doloremque culpa adipisci aspernatur, incidunt ullam consectetur eaque!</p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
-            <img src="./images/rafting-image-one.jpg" alt="first rafting image">
-            <img src="./images/rafting-image-two.jpg" alt="second rafting image">
-            <img src="./images/rafting-image-three.jpg" alt="third rafting image">
-            <img src="./images/rafting-image-four.jpg" alt="fourth rafting image">
-            <img src="./images/rafting-image-five.jpg" alt="fifth rafting image">
-        </section>
+            <div class="adventure-images">
+                <figure>
+                    <img src="./images/rafting-image-one.jpg" alt="first rafting image">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="./images/rafting-image-two.jpg" alt="second rafting image">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="./images/rafting-image-three.jpg" alt="third rafting image">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="./images/rafting-image-four.jpg" alt="fourth rafting image">
+                    <figcaption>Thunder River</figcaption>
+                </figure>
+                <figure>
+                    <img src="./images/rafting-image-five.jpg" alt="fifth rafting image">
+                    <figcaption>Whitewater Rapids</figcaption>
+                </figure>
+            </div>
+        </section>        
     </main>
     <footer>
         <p>&copy;, 2025, White Water Rafting, Benjamin Tom</p>
