made changes to contact.html

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -101,7 +101,7 @@
         </section>
     </main>
     <footer>
-        <a href="https://app.moqups.com/R2MCdh6hg4iiLkIr4fgakJYCDw5nyi06/view/page/ad12de680?ui=0">Wireframe</a>
+        <a href="https://app.moqups.com/R2MCdh6hg4iiLkIr4fgakJYCDw5nyi06/view/page/ad12de680">Wireframe Link</a>
         <nav class="sociallinks">
             <a href="https://facebook.com">
                 <img src="./images/facebook-icon.webp" alt="facebook icon">
