changes made to index.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -30,9 +30,10 @@
             <div class="caption">
                 <h1>Experience the Thrill of White Water Rafting!</h1>
                 <p>Unforgettable Adventures on the Wildest Rivers!</p>
-                <button type="button">
-                    <a href="trips.html" class="cta-button">Book Your Adventure Now</a>
-                </button>
+                <a href="trips.html" class="cta-button">
+                    <button type="button">Book Your Adventure Now
+                    </button>
+                </a>
             </div>
         </div>
 
