added pictures to rafting cards

--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -35,24 +35,28 @@
         <!-- CSS GRID FOR TRIPS -->
         <section class="trip-list">
             <div class="trip">
+                <img src="./images/male-kayaking-with-paddle-lake.jpg" alt="picutre of beginner rapids">
                 <h3>Beginner Rapids</h3>
                 <p>A fun and safe trip for first-timers and families.</p>
                 <span>$99</span>
                 <a href="contact.html" class="book-button">Book Now</a>
             </div>
             <div class="trip">
+                <img src="./images/OIP.jpg" alt="an advanced rapid">
                 <h3>Advanced Rapids</h3>
                 <p>Intense whitewater for adrenaline seekers!</p>
                 <span>$149</span>
                 <a href="contact.html" class="book-button">Book Now</a>
             </div>
             <div class="trip">
+                <img src="./images/back-view-couple-enjoying-sunrise.jpg" alt="picture of campers in tent">
                 <h3>Overnight Expedition</h3>
                 <p>Multi-day rafting adventure with camping.</p>
                 <span>$299</span>
                 <a href="contact.html" class="book-button">Book Now</a>
             </div>
             <div class="trip">
+                <img src="./images/young-adults-travelling-winter-time.jpg" alt="young people preparing to travel">
                 <h3>Custom Tours</h3>
                 <p>Design your own rafting adventure!</p>
                 <span>Varies</span>
